--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
-backend/instance/
+backend-deprecated/instance/
 .webassets-cache
 
 # Scrapy stuff:
