--- a/vue-web/package.json
+++ b/vue-web/package.json
@@ -19,9 +19,10 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.9.0",
-    "element-plus": "^2.9.10",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -36,6 +37,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "daisyui": "^5.0.43",
     "eslint": "^9.22.0",
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
